Fix android build.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -15,28 +15,62 @@ set(TORCH_INCLUDE_DIRS
   ${Torch_DIR}/include/torch/csrc/api/include
   )
 
-# specify pytroch_qnnpack twice for the workaround of resolving a cyclic dependency of symbols in pytorch_qnnpack and torch
-set(TORCH_LIBRARIES
-  ${Torch_DIR}/lib/libeigen_blas.a
-  ${Torch_DIR}/lib/libnnpack.a
-  ${Torch_DIR}/lib/libpytorch_qnnpack.a
-  ${Torch_DIR}/lib/libtorch.a
-  ${Torch_DIR}/lib/libpytorch_qnnpack.a
-  ${Torch_DIR}/lib/libc10.a
-  ${Torch_DIR}/lib/libcpuinfo.a
-  ${Torch_DIR}/lib/libclog.a
-  )
-
-set(ANDROID_LIBRARIES
-  log
-  android
-  )
-
-include_directories(${TORCH_INCLUDE_DIRS})
-
 # Add source to this project's executable.
-add_executable (main "libtorch-test.cpp" "libtorch-test.h")
-target_link_libraries(main "${TORCH_LIBRARIES}" ${ANDROID_LIBRARIES})
+add_executable (testmain "libtorch-test.cpp" "libtorch-test.h")
+target_include_directories(testmain PRIVATE ${TORCH_INCLUDE_DIRS})
+
+if (ANDROID)
+
+  function(import_static_lib name)
+    add_library(${name} STATIC IMPORTED)
+    set_property(
+        TARGET ${name}
+        PROPERTY IMPORTED_LOCATION
+        ${Torch_DIR}/lib/${name}.a)
+  endfunction(import_static_lib)
+
+  import_static_lib(libtorch)
+  import_static_lib(libc10)
+  import_static_lib(libnnpack)
+  import_static_lib(libpytorch_qnnpack)
+  import_static_lib(libeigen_blas)
+  import_static_lib(libcpuinfo)
+  import_static_lib(libclog)
+
+
+  # Link most things statically on Android.
+  target_link_libraries(testmain
+      -Wl,--gc-sections
+      -Wl,--whole-archive
+      libtorch
+      -Wl,--no-whole-archive
+      libc10
+      libnnpack
+      libpytorch_qnnpack
+      libeigen_blas
+      libcpuinfo
+      libclog
+    log
+    android
+  )
+
+
+else (ANDROID)
+
+  # specify pytroch_qnnpack twice for the workaround of resolving a cyclic dependency of symbols in pytorch_qnnpack and torch
+  set(TORCH_LIBRARIES
+    ${Torch_DIR}/lib/libeigen_blas.a
+    ${Torch_DIR}/lib/libnnpack.a
+    ${Torch_DIR}/lib/libpytorch_qnnpack.a
+    ${Torch_DIR}/lib/libtorch.a
+    ${Torch_DIR}/lib/libpytorch_qnnpack.a
+    ${Torch_DIR}/lib/libc10.a
+    ${Torch_DIR}/lib/libcpuinfo.a
+    ${Torch_DIR}/lib/libclog.a
+    )
+
+endif (ANDROID)
+
 
 # The following code block is suggested to be used on Windows.
 # According to https://github.com/pytorch/pytorch/issues/25457,
